src/test/deca/context/valid/declClass-classInReturnType.deca
class A {
}

class B {
    A method(){
        int a = 2;
    }
}
