src/test/deca/context/invalid/method-call-noMethod.deca
class A{}

{
    A a;
    a.azdklaz();
}
